--- a/index.html
+++ b/index.html
@@ -4,24 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DevJane Portfolio Website</title>
+    <title>Tiffani Burk</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
         integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
+        <script src="https://kit.fontawesome.com/65a39d250b.js" crossorigin="anonymous"></script>
+
 
     <!-- Update these with your own fonts -->
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap"
         rel="stylesheet">
 
     <link rel="stylesheet" href="css/style.css">
+    
 
 </head>
 
 <body>
     <header>
-        <div class="logo">
+        <!-- <div class="logo">
             <img src="img/devjane.png" alt="">
-        </div>
+        </div> -->
         <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
         </button>
@@ -38,9 +41,9 @@
     <!-- Introduction -->
     <section class="intro" id="home">
         <h1 class="section__title section__title--intro">
-            Hi, I am <strong>Jane Smith</strong>
+            Hi 👋 I am <strong>Tiffani Burk</strong>
         </h1>
-        <p class="section__subtitle section__subtitle--intro">front-end dev</p>
+        <p class="section__subtitle section__subtitle--intro">front end designer & dev</p>
         <img src="img/profile.webp" alt="a picture of Jane Smith smiling" class="intro__img">
     </section>
 
@@ -50,24 +53,21 @@
         <h2 class="section__title section__title--services">What I do</h2>
         <div class="services">
             <div class="service">
-                <h3>Design + Development</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.</p>
+                <h3>Design</h3>
+                <img class="service-image" src="img/design copy.jpg" alt="">
+                <p>Tools: Figma, Adobe XD, Photoshop, Illustrator</p>
             </div> <!-- / service -->
 
             <div class="service">
-                <h3>E-Commerce</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.</p>
+                <h3>Research</h3>
+                <img class="service-image" src="img/research copy.jpg" alt="">
+                <p>Methods: Market Research, User Interviews, Usability Testing, User Flows</p>
             </div> <!-- / service -->
 
             <div class="service">
-                <h3>WordPress</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.</p>
+                <h3>Code</h3>
+                <img class="service-image" src="img/code copy.jpg" alt="">
+                <p>Tech Stack: Javascript, React, Next.js, HTML, CSS, Github</p>
             </div> <!-- / service -->
         </div> <!-- / services -->
 
@@ -78,15 +78,11 @@
     <!-- About me -->
     <section class="about-me" id="about">
         <h2 class="section__title section__title--about">Who I am</h2>
-        <p class="section__subtitle section__subtitle--about">Designer & developer based out of NYC</p>
+        <p class="section__subtitle section__subtitle--about">Designer & Front-End Dev living in Nashville</p>
 
         <div class="about-me__body">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat.</p>
+            <p>I started learning graphic design in middle school from my dad, who is a graphic designer turned entrepreneur. He taught me the ins and outs of Adobe Photoshop and Illustrator. Eventually, he started his own direct mail advertising company and hired me on to replace him as the graphic designer. Since then, I’ve discovered UX Design. I am a graduate of Nashville Software School. I graduated from their Frontend Design and Development program.</p>
+            <p>In my free time, I enjoy martial arts and singing.</p>
         </div>
 
         <img src="img/about.jpeg" alt="Jane leaning against a bus" class="about-me__img">
@@ -117,7 +113,7 @@
                 </a>
                 <div class="item-text">
                     <h3>Rhino Splits</h3>
-                    <p class="project-description">UX UI Design</p>
+                    <p class="project-description">UX / UI Design</p>
                 </div>
             </div>
 
@@ -128,7 +124,7 @@
                 </a>
                 <div class="item-text">
                     <h3>Honey Rae Repairs</h3>
-                    <p class="project-description">Front-End</p>
+                    <p class="project-description">Front-End Dev</p>
                 </div>
             </div>
 
@@ -182,7 +178,7 @@
             <!-- Portfolio item 0 0-->
             <!-- <a href="#" class="portfolio__item">
                     <img src="img/portfolio-10.jpg" alt="" class="portfolio__img">
-                </a> --> -->
+                </a> --> 
         </div>
     </section>
 
@@ -190,25 +186,21 @@
     <!-- Footer -->
     <footer class="footer">
         <!-- replace with your own email address -->
-        <a href="mailto:hello@jane.dev" class="footer__link">hello@jane.dev</a>
+        <a href="mailto:tiffani.j.burk@gmail.com" class="footer__link">tiffani.j.burk@gmail.com</a>
         <ul class="social-list">
             <li class="social-list__item">
-                <a class="social-list__link" href="https://codepen.io">
-                    <i class="fab fa-codepen"></i>
+                <a class="social-list__link" href="https://www.linkedin.com/in/tiffani-burk/">
+                    <i class="fa-brands fa-linkedin-in"></i>
                 </a>
             </li>
             <li class="social-list__item">
-                <a class="social-list__link" href="http://dribbble.com">
+                <a class="social-list__link" href="https://dribbble.com/tiffani-burk">
                     <i class="fab fa-dribbble"></i>
                 </a>
             </li>
+           
             <li class="social-list__item">
-                <a class="social-list__link" href="https://twitter.com">
-                    <i class="fab fa-twitter"></i>
-                </a>
-            </li>
-            <li class="social-list__item">
-                <a class="social-list__link" href="https://github.com">
+                <a class="social-list__link" href="https://github.com/tiffani-burk">
                     <i class="fab fa-github"></i>
                 </a>
             </li>
