3rd project added

--- a/honey-rae.html
+++ b/honey-rae.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/honey.css">
 
 </head>
 
@@ -35,32 +35,51 @@
         </nav>
     </header>
 
+    <h3>Overview</h3>
+    <div class="vid-container">
+    <div class="overview-container">
+        <p>This application was built using React for multiple users. The user can log in as a customer or an employee.
+            The
+            employee-user has the ability to search service tickets by name, view emergency only tickets or all tickets
+            and
+            view a list of customers. When clicking on the customer link, they can view the customer details. They also
+            have
+            the ability to view employees and employee details. The customer-user has the ability to create a service
+            request ticket, which then displays to their screen and updates to the employees account as well. The
+            customer-user can also view open tickets (service requests that have not been worked on) and view just their
+            service request tickets. Dynamic coding. ERD is attached below.
+        </p>
+    </div>
+    <h3>Video Walkthough</h3>
+        <video width="75%" height="auto" controls>
+            <source src="img/honey-rae/Honey Rae Repairs (1).mp4">
+        </video>
+        <br>
 
-  
+        <h3>ERD</h3>
+        <img src="img/honey-rae/ERD.png" />
+
+    </div>
 
 
-    <!-- Footer -->
-    <footer class="footer">
+     <!-- Footer -->
+     <footer class="footer">
         <!-- replace with your own email address -->
-        <a href="mailto:hello@jane.dev" class="footer__link">hello@jane.dev</a>
+        <a href="mailto:tiffani.j.burk@gmail.com" class="footer__link">tiffani.j.burk@gmail.com</a>
         <ul class="social-list">
             <li class="social-list__item">
-                <a class="social-list__link" href="https://codepen.io">
-                    <i class="fab fa-codepen"></i>
+                <a class="social-list__link" href="https://www.linkedin.com/in/tiffani-burk/">
+                    <i class="fa-brands fa-linkedin-in"></i>
                 </a>
             </li>
             <li class="social-list__item">
-                <a class="social-list__link" href="http://dribbble.com">
+                <a class="social-list__link" href="https://dribbble.com/tiffani-burk">
                     <i class="fab fa-dribbble"></i>
                 </a>
             </li>
+           
             <li class="social-list__item">
-                <a class="social-list__link" href="https://twitter.com">
-                    <i class="fab fa-twitter"></i>
-                </a>
-            </li>
-            <li class="social-list__item">
-                <a class="social-list__link" href="https://github.com">
+                <a class="social-list__link" href="https://github.com/tiffani-burk">
                     <i class="fab fa-github"></i>
                 </a>
             </li>
