4th project added

--- a/cake-my-day.html
+++ b/cake-my-day.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/cake.css">
 
 </head>
 
@@ -35,32 +35,91 @@
         </nav>
     </header>
 
+    <div class="intro-container">
+        <img src="img/cake/cake-mock.png" alt="">
 
-  
+        <div class="overview">
+            <h3>Overview</h3>
+            <p>The owner of a local bakery wanted me to create an app for her store. The goal was to make it more
+                convenient and
+                easier for her customers to create orders.</p>
+
+            <h3>My Role</h3>
+            <p>Being that I was the only designer on this project, I handled all the research and UI design.</p>
+
+            <h3>Initial User Research</h3>
+            <p>For the initial research, I got to know my client’s business. It’s a bakery that specializes in cake
+                pops. It’s owned by an independent business woman and single mom. Her target audience is mostly female.
+                Although her main competition is the few other bakeries located in her town, none of them specialize in
+                cake pops. So I studied some of her online competitors, to get a feel for what they are doing as well.
+                In the initial research stage, I discovered that many of the people that purchase cake pops are women,
+                particularly moms. So I created a user-persona based on that knowledge. The user persona I came up with
+                is a 34 year old stay-at-home mom, named Jackie. She has a bachelors degree in sociology and loves yoga,
+                gardening and crafting. She has a 2 year old son that is her whole world. Jackie loves cake pops and is
+                looking to have something fun, unique and different to serve at her son’s 2 year birthday party.</p>
+
+        </div>
+    </div>
+
+    <div class="main-container">
+        <h3>Design Tools</h3>
+        <img style="width: 50%" src="img/cake/design-tools-cmd.png" alt="">
+
+
+        <img src="img/cake/user-persona-cmd.png" alt="">
+
+
+        <h3>Design Approach</h3>
+        <p>With the user and the business in mind, I started by creating a user flow map for our persona, Jackie.
+            After
+            figuring out how Jackie was going to move through the app, I created a wireframe to give the client an
+            idea
+            on how the app was going to work.
+
+            I also created a moodboard and sent it to her to make sure we were on the same page, as far as
+            aesthetics
+            go. Once I got the okay from her, I started designing.</p>
+
+
+
+        <img style="width: 70%" src="img/cake/cake-my-day-flow.webp" alt="">
+
+        <h3>User Testing</h3>
+        <p>I ran both moderated and unmoderated user tests for this app. Upon initial testing, some of the users were
+            having a difficult time figuring out how to use the category slider. However, I was able to quickly make
+            adjustments and fixed that issue. After that, all of the users had no problems navigating through the tasks
+            I gave them. All of the users were able confidently make a purchase on the app.</p>
+
+        <h3>Final Navigation</h3>
+        input video
+
+        <h3>Mockups</h3>
+        Input images
+
+    </div>
+
+
 
 
     <!-- Footer -->
+    <!-- Footer -->
     <footer class="footer">
         <!-- replace with your own email address -->
-        <a href="mailto:hello@jane.dev" class="footer__link">hello@jane.dev</a>
+        <a href="mailto:tiffani.j.burk@gmail.com" class="footer__link">tiffani.j.burk@gmail.com</a>
         <ul class="social-list">
             <li class="social-list__item">
-                <a class="social-list__link" href="https://codepen.io">
-                    <i class="fab fa-codepen"></i>
+                <a class="social-list__link" href="https://www.linkedin.com/in/tiffani-burk/">
+                    <i class="fa-brands fa-linkedin-in"></i>
                 </a>
             </li>
             <li class="social-list__item">
-                <a class="social-list__link" href="http://dribbble.com">
+                <a class="social-list__link" href="https://dribbble.com/tiffani-burk">
                     <i class="fab fa-dribbble"></i>
                 </a>
             </li>
+
             <li class="social-list__item">
-                <a class="social-list__link" href="https://twitter.com">
-                    <i class="fab fa-twitter"></i>
-                </a>
-            </li>
-            <li class="social-list__item">
-                <a class="social-list__link" href="https://github.com">
+                <a class="social-list__link" href="https://github.com/tiffani-burk">
                     <i class="fab fa-github"></i>
                 </a>
             </li>
