--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <!-- Portfolio item 04 -->
             <div class="item-container">
                 <a href="cake-my-day.html" class="portfolio__item">
-                    <img src="img/cake-my-day.jpg" alt="" class="portfolio__img">
+                    <img src="img/cake/cake.png" alt="" class="portfolio__img">
                 </a>
                 <div class="item-text">
                     <h3>Cake My Day</h3>
