--- a/lyrically.html
+++ b/lyrically.html
@@ -160,25 +160,21 @@
     <!-- Footer -->
     <footer class="footer">
         <!-- replace with your own email address -->
-        <a href="mailto:hello@jane.dev" class="footer__link">hello@jane.dev</a>
+        <a href="mailto:tiffani.j.burk@gmail.com" class="footer__link">tiffani.j.burk@gmail.com</a>
         <ul class="social-list">
             <li class="social-list__item">
-                <a class="social-list__link" href="https://codepen.io">
-                    <i class="fab fa-codepen"></i>
+                <a class="social-list__link" href="https://www.linkedin.com/in/tiffani-burk/">
+                    <i class="fa-brands fa-linkedin-in"></i>
                 </a>
             </li>
             <li class="social-list__item">
-                <a class="social-list__link" href="http://dribbble.com">
+                <a class="social-list__link" href="https://dribbble.com/tiffani-burk">
                     <i class="fab fa-dribbble"></i>
                 </a>
             </li>
+           
             <li class="social-list__item">
-                <a class="social-list__link" href="https://twitter.com">
-                    <i class="fab fa-twitter"></i>
-                </a>
-            </li>
-            <li class="social-list__item">
-                <a class="social-list__link" href="https://github.com">
+                <a class="social-list__link" href="https://github.com/tiffani-burk">
                     <i class="fab fa-github"></i>
                 </a>
             </li>
