--- a/manooth.html
+++ b/manooth.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/manooth.css">
 
 </head>
 
@@ -35,32 +35,89 @@
         </nav>
     </header>
 
+    <section class="project-det">
 
-  
+        <h3>Overview</h3>
+        <p>Manooth Furniture is a brand new business, selling affordable, high-end furniture, made in Ireland. This was
+            a project for my Adobe XD class, led by Adobe-certified instructor, Daniel Scott.
+        </p>
+
+        <h3>Objective</h3>
+        <p>To build an e-commerce website and app for people to browse and purchase furniture for home delivery. The
+            website should include: 1. Homepage (With a Nav {Living Room, Bedroom, Kitchen, Dining Room}, Hero Slider,
+            New in Store, Inspiration Ideas, Clearance and a Footer) 2. Category Page and 3. Product Page</p>
+
+        <h3>My Role </h3>
+        <p>As a student, my role was to create this entire website from the ground up, as well as a full app. I created
+            wireframes, prototypes, mockups and ran usability tests.
+        </p>
+
+        <h3>Initial User Research</h3>
+        <p>Since this was a brand new website, no existing data was available. However, since it is from an existing
+            field, I was able to locate data online that applied to our users. Based on that data, I created a user
+            persona for Manooth Furniture. I continued to keep that user persona in mind for every decision that I made
+            for Manooth Furniture.</p>
+
+        <h3>Design Approach</h3>
+        <p>I wanted to start building the website first and the app second, so to keep the theme and user experience of
+            the two quite similar. I approach all my designs with three main objectives, to make them useful, usable and
+            valuable. First, I focused on strategy, to find out what the business wanted, what the stakeholders wanted
+            and what the users wanted. I, then, created and prioritized an informational architecture outline. I decided
+            the “hierarchy tree” was the best information architecture model for displaying our information, since this
+            was going to be a content heavy e-commerce website. When creating my wireframe, I separated items of less
+            visual heirachry from those of higher importance using contrast. Going into this, I wanted to keep core
+            principles of Interaction Design, such as; consistency, visibility, predictability, learnability and
+            feedback at the forefront of my design process.</p>
+
+        <h3>Final Navigation Experience</h3>
+        <p>I started with a sliding hero image to get the user’s attention. I kept the home page simple, using drop down
+            menus to guide the user to their perceived destination.</p>
+
+        insert photo
+
+        <p>On the product page, I added an interactive design, by making the star ratings pushable and the add to cart
+            button and favorite button interactive.
+        </p>
+
+        insert photo
+
+        <h3>Video Walkthrough</h3>
+        insert <video src="#"></video>
+
+        <button>Interact</button>
+
+        <!-- App Version -->
+        <h3>The App version</h3>
+        photo gallery
+
+        <video src="#"></video>
+        video 
+
+
+    </section>
+
+
+
 
 
     <!-- Footer -->
     <footer class="footer">
         <!-- replace with your own email address -->
-        <a href="mailto:hello@jane.dev" class="footer__link">hello@jane.dev</a>
+        <a href="mailto:tiffani.j.burk@gmail.com" class="footer__link">tiffani.j.burk@gmail.com</a>
         <ul class="social-list">
             <li class="social-list__item">
-                <a class="social-list__link" href="https://codepen.io">
-                    <i class="fab fa-codepen"></i>
+                <a class="social-list__link" href="https://www.linkedin.com/in/tiffani-burk/">
+                    <i class="fa-brands fa-linkedin-in"></i>
                 </a>
             </li>
             <li class="social-list__item">
-                <a class="social-list__link" href="http://dribbble.com">
+                <a class="social-list__link" href="https://dribbble.com/tiffani-burk">
                     <i class="fab fa-dribbble"></i>
                 </a>
             </li>
+
             <li class="social-list__item">
-                <a class="social-list__link" href="https://twitter.com">
-                    <i class="fab fa-twitter"></i>
-                </a>
-            </li>
-            <li class="social-list__item">
-                <a class="social-list__link" href="https://github.com">
+                <a class="social-list__link" href="https://github.com/tiffani-burk">
                     <i class="fab fa-github"></i>
                 </a>
             </li>
