changes made to lyrically

--- a/manooth.html
+++ b/manooth.html
@@ -73,13 +73,13 @@
         <p>I started with a sliding hero image to get the user’s attention. I kept the home page simple, using drop down
             menus to guide the user to their perceived destination.</p>
 
-        insert photo
+        <img src="img/manooth/manooth1.png" alt="">
 
         <p>On the product page, I added an interactive design, by making the star ratings pushable and the add to cart
             button and favorite button interactive.
         </p>
 
-        insert photo
+        <img src="img/manooth/manooth2.png" alt="">
 
         <h3>Video Walkthrough</h3>
         insert <video src="#"></video>
