--- a/visual-ui.html
+++ b/visual-ui.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/ui.css">
 
 </head>
 
@@ -35,8 +35,31 @@
         </nav>
     </header>
 
+    <section .main-container>
+        <p>This is a collection of UI and visual designs</p>
+        <div class="photo-grid">
+            <img src="img/ui-visual/Screen Shot 2022-10-19 at 7.45.02 PM 2.png" alt="">
+            <img src="img/ui-visual/Screen Shot 2022-10-19 at 7.53.09 PM 2.png" alt="">
+            <img src="img/ui-visual/Screen Shot 2022-10-19 at 7.53.33 PM 2.png" alt="">
+            <img src="img/ui-visual/Screen Shot 2022-10-19 at 7.53.54 PM 2.png" alt="">
+            <img src="img/ui-visual/bootique.png" alt="">
+        </div>
 
-  
+        <img src="img/ui-visual/zen.png" alt="">
+
+        <img src="img/ui-visual/business.png" alt="">
+
+        <h3>Logos</h3>
+        <img src="img/ui-visual/cake-my-day-logo.webp" alt="">
+
+        <img src="img/ui-visual/stefalashed-logo.webp" alt="">
+
+
+
+    </section>
+
+
+
 
 
     <!-- Footer -->
@@ -54,7 +77,7 @@
                     <i class="fab fa-dribbble"></i>
                 </a>
             </li>
-           
+
             <li class="social-list__item">
                 <a class="social-list__link" href="https://github.com/tiffani-burk">
                     <i class="fab fa-github"></i>
