--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h1 class="section__title section__title--intro">
             Hi 👋 I am <strong>Tiffani Burk</strong>
         </h1>
-        <p class="section__subtitle section__subtitle--intro">front end designer & dev</p>
+        <p class="section__subtitle section__subtitle--intro">UX DESIGNER</p>
         <img src="img/profile.webp" alt="a picture of Jane Smith smiling" class="intro__img">
     </section>
 
