--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <p>In my free time, I enjoy martial arts and singing.</p>
         </div>
 
-        <img src="img/about.jpeg" alt="Jane leaning against a bus" class="about-me__img">
+        <img src="img/about.jpeg" alt="Tiffani and her dog smiling" class="about-me__img">
     </section>
 
     <!-- My Work -->
