--- a/index.html
+++ b/index.html
@@ -5,18 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tiffani Burk</title>
+    <!-- Adding Responsiveness -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+    <!-- Link Font Awesome for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
         integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
-        <script src="https://kit.fontawesome.com/65a39d250b.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/65a39d250b.js" crossorigin="anonymous"></script>
 
 
-    <!-- Update these with your own fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap"
+    <!-- My fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
         rel="stylesheet">
 
+    <!-- Link Style Sheet -->
     <link rel="stylesheet" href="css/style.css">
-    
+
 
 </head>
 
@@ -78,10 +84,15 @@
     <!-- About me -->
     <section class="about-me" id="about">
         <h2 class="section__title section__title--about">Who I am</h2>
-        <p class="section__subtitle section__subtitle--about">UX Designer & Front-End Developer, based out of Nashville.</p>
+        <p class="section__subtitle section__subtitle--about">UX Designer & Front-End Developer, based out of Nashville.
+        </p>
 
         <div class="about-me__body">
-            <p>I started learning graphic design in middle school from my dad, who is a graphic designer turned entrepreneur. He taught me the ins and outs of Adobe Photoshop and Illustrator. Eventually, he started his own direct mail advertising company and hired me on to replace him as the graphic designer. Since then, I’ve discovered UX Design. I am a graduate of Nashville Software School. I graduated from their Frontend Design and Development program.</p>
+            <p>I started learning graphic design in middle school from my dad, who is a graphic designer turned
+                entrepreneur. He taught me the ins and outs of Adobe Photoshop and Illustrator. Eventually, he started
+                his own direct mail advertising company and hired me on to replace him as the graphic designer. Since
+                then, I’ve discovered UX Design. I am a graduate of Nashville Software School. I graduated from their
+                Frontend Design and Development program.</p>
             <p>In my free time, I enjoy martial arts and singing.</p>
         </div>
 
@@ -178,7 +189,7 @@
             <!-- Portfolio item 0 0-->
             <!-- <a href="#" class="portfolio__item">
                     <img src="img/portfolio-10.jpg" alt="" class="portfolio__img">
-                </a> --> 
+                </a> -->
         </div>
     </section>
 
@@ -198,7 +209,7 @@
                     <i class="fab fa-dribbble"></i>
                 </a>
             </li>
-           
+
             <li class="social-list__item">
                 <a class="social-list__link" href="https://github.com/tiffani-burk">
                     <i class="fab fa-github"></i>
