added sections to lyrically

--- a/lyrically.html
+++ b/lyrically.html
@@ -95,20 +95,20 @@
 
     <section>
         <h2>Tools and Process</h2>
-    <img class="design-proc" style="width: 70%" src="img/Lyrically/Design Tools.png" />
+        <img class="design-proc" style="width: 70%" src="img/Lyrically/Design Tools.png" />
 
-    <br>
+        <br>
 
-  
-    <img class="design-proc" style="width: 70%" src="img/Lyrically/Design Process.png" />
-    <figcaption>Design Process</figcaption>
-</section>
+
+        <img class="design-proc" style="width: 70%" src="img/Lyrically/Design Process.png" />
+        <figcaption>Design Process</figcaption>
+    </section>
 
 
     <!-- Discover -->
     <section class="discover-section">
         <div>
-            <h2>Discover Phase</h2>
+            <h2 class="process-header">Discover Phase</h2>
         </div>
 
 
@@ -160,9 +160,10 @@
             </div>
         </div>
 
+    </section>
 
 
-
+    <section class="discover-section2">
         <h2>Competitive Analysis</h2>
 
         <img src="img/Lyrically/Ultimate-Guitar.jpeg" />
@@ -175,7 +176,9 @@
             <img src="img/Lyrically/musician-playing-electric-guitar.webp" alt="">
             <img src="img/Lyrically/user1.png" />
         </div>
+    </section>
 
+    <section class="discover-section3">
         <h2>Research Synthesis</h2>
         <img src="img/Lyrically/research.png" />
 
@@ -186,8 +189,9 @@
             cover
             songs
             and original songs.</p>
-
     </section>
+
+
 
     <!-- Define -->
     <section class="define-section">
@@ -202,7 +206,9 @@
 
         <h2>Journey Mapping</h2>
         <img style="width: 65%; height: auto;" src="img/Lyrically/journey-map.jpeg" />
+    </section>
 
+    <section class="define-section2">
         <h2>Client Goals & Contraints</h2>
         <p>The two biggest constraints of this project were time and money. Due to a limited budget, I was only able
             to
@@ -240,7 +246,9 @@
                 to explore the code in the link below.</p>
             <img style="width: 70%; height: auto;" src="img/Lyrically/mockups.png" />
         </div>
+    </section>
 
+    <section class="deploy-section2">
         <p>Video walkthrough of Lyrically</p>
         <video width="65%" height="auto" controls>
             <source src="img/Lyrically/Lyrically-waltkhough1.mp4">
