--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             Hi 👋 I am <strong>Tiffani Burk</strong>
         </h1>
         <p class="section__subtitle section__subtitle--intro">UX DESIGNER</p>
-        <img src="img/profile.webp" alt="a picture of Jane Smith smiling" class="intro__img">
+        <img src="img/profile.webp" alt="a picture of Tiffani smiling" class="intro__img">
     </section>
 
 
