--- a/lyrically.html
+++ b/lyrically.html
@@ -77,9 +77,9 @@
             I
             designed Lyrically as a solution to this problem.</p>
     </section>
-    <section class="intro2">
-        <div class="mock-container">
-            <img class="mockup1" src="img/Lyrically/ipad-mock.png" />
+    <section class="intro2-section">
+        <div class="intro-container">
+            <img class="mockup1-img" src="img/Lyrically/ipad-mock.png" />
             <div class="role-container">
                 <h2>My Role</h2>
                 <p>I am the creator, designer and developer of this app.
@@ -108,7 +108,7 @@
     <!-- Discover -->
     <section class="discover-section">
         <div>
-            <h2 class="process-header">Discover Phase</h2>
+            <h3 class="process-header"> &#60 Discover Phase &#62 </h3>
         </div>
 
 
@@ -196,7 +196,7 @@
     <!-- Define -->
     <section class="define-section">
 
-        <h2>Define Phase</h2>
+        <h3 class="process-header"> &#60 Define Phase &#62 </h3>
 
 
         <h2>User Persona</h2>
@@ -224,7 +224,7 @@
     <section class="design-section">
         <!-- Design -->
         <div>
-            <h2>Design Phase</h2>
+            <h3 class="process-header"> &#60 Design Phase &#62 </h3>
         </div>
 
         <h2>Wireframes</h2>
@@ -239,12 +239,13 @@
 
     <!-- Deploy -->
     <section class="deploy-section">
-        <div>
-            <h2>Deploy Phase</h2>
-            <p>I had two weeks to take this application from ideation to a fully functioning product. Please feel
+        <h3 class="process-header"> &#60 Deploy Phase &#62 </h3>
+        <div class="deploy-container">
+            <p class="deploy-descript">I had two weeks to take this application from ideation to a fully functioning
+                product. Please feel
                 free
                 to explore the code in the link below.</p>
-            <img style="width: 70%; height: auto;" src="img/Lyrically/mockups.png" />
+            <img class="deploy-img" style="width: 70%; height: auto;" src="img/Lyrically/mockups.png" />
         </div>
     </section>
 
