responsiveness added to Lyrically

--- a/lyrically.html
+++ b/lyrically.html
@@ -95,12 +95,12 @@
 
     <section>
         <h2>Tools and Process</h2>
-        <img class="design-proc" style="width: 70%" src="img/Lyrically/Design Tools.png" />
+        <img class="design-proc" src="img/Lyrically/Design Tools.png" />
 
         <br>
 
 
-        <img class="design-proc" style="width: 70%" src="img/Lyrically/Design Process.png" />
+        <img class="design-proc" src="img/Lyrically/Design Process.png" />
         <figcaption>Design Process</figcaption>
     </section>
 
@@ -200,12 +200,12 @@
 
 
         <h2>User Persona</h2>
-        <img style="width: 65%; height: auto;" src="img/Lyrically/user persona.jpeg" />
+        <img class="user-img" src="img/Lyrically/user persona.jpeg" />
 
         <br>
 
         <h2>Journey Mapping</h2>
-        <img style="width: 65%; height: auto;" src="img/Lyrically/journey-map.jpeg" />
+        <img class="journey-img" src="img/Lyrically/journey-map.jpeg" />
     </section>
 
     <section class="define-section2">
@@ -218,7 +218,7 @@
         </p>
 
         <h2>Site Map</h2>
-        <img style="width: 90%; height: auto;" src="img/Lyrically/site-map.webp" />
+        <img class="site-img" src="img/Lyrically/site-map.webp" />
     </section>
 
     <section class="design-section">
@@ -228,10 +228,10 @@
         </div>
 
         <h2>Wireframes</h2>
-        <img style="width: 90%; height: auto;" src="img/Lyrically/wireframe.png" />
+        <img class="wireframe-img" src="img/Lyrically/wireframe.png" />
 
         <h2>Style Guide</h2>
-        <img src="img/Lyrically/style-guide.png" />
+        <img class="style-img" src="img/Lyrically/style-guide.png" />
         <p>After studying some of the brands that the users relate to, I noticed that several had black in them.
             Therefore I decided to brand Lyrically with black and purple.
         </p>
@@ -245,17 +245,17 @@
                 product. Please feel
                 free
                 to explore the code in the link below.</p>
-            <img class="deploy-img" style="width: 70%; height: auto;" src="img/Lyrically/mockups.png" />
+            <img class="deploy-img" src="img/Lyrically/mockups.png" />
         </div>
     </section>
 
     <section class="deploy-section2">
         <p>Video walkthrough of Lyrically</p>
-        <video width="65%" height="auto" controls>
+        <video class="vid1" width="100%" height="auto" controls>
             <source src="img/Lyrically/Lyrically-waltkhough1.mp4">
         </video>
         <br>
-        <video width="40%" height="auto" controls src="img/lyrically/Lyrically-walkthrough2.mp4"></video>
+        <video class="vid2" width="100%" height="auto" controls src="img/lyrically/Lyrically-walkthrough2.mp4"></video>
 
         <p>Photos of Developed Application</p>
     </section>
